# tau

./: Cargo.toml  README.md
public/: config.json
public/templates/c++/: Makefile  README.md
public/templates/c++/include/: add.h  catch.h
public/templates/c++/src/: main.cpp
public/templates/c++/tests/: test.cpp
public/templates/golang/: .gitignore  README.md  go.mod
public/templates/golang/cmd/: main.go
public/templates/golang/pkg/mathops/: add.go
public/templates/golang/test/: add_test.go
public/templates/python/: README.md
public/templates/python/tests/: test_add.py
public/templates/typescript/: README.md  bun.lockb  package.json
public/templates/typescript/test/: add.test.ts
public/templates/zig/: .gitignore  README.md  build.zig
public/templates/zig/src/: main.zig
src/: context.rs  directory.rs  exec.rs  main.rs
src/utils/: dir.rs  mod.rs  replace.rs  string.rs
