[package]
name = "tau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["derive"] }
colored = "2.0.4"
dialoguer = "0.11.0"
directories = "5.0.1"
dirs = "5.0.1"
enum_dispatch = "0.3.12"
fs_extra = "1.3.0"
include_dir = "0.7.3"
itertools = "0.11.0"
lazy_static = "1.4.0"
regex = "1.9.5"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
shlex = "1.2.0"
